# Heart-Disease-Prediction

./: .gitignore  README.md  app.py  feature_info.pkl  heart_disease_prediction.py  model.pkl  pyproject.toml  requirements.txt  scaler.pkl  train_model.py
static/css/: style.css
templates/: base.html  blog.html  comparison.html  faq.html  index.html  predict.html  result.html  visualizations.html
utils/: preprocess.py
